--- a/teamApp/Storyboards/Albums.storyboard
+++ b/teamApp/Storyboards/Albums.storyboard
@@ -97,42 +97,74 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleAspectFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Vr3-Ws-Rs1">
-                                <rect key="frame" x="54" y="108" width="306" height="680"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q3X-Cb-3ML">
-                                        <rect key="frame" x="0.0" y="0.0" width="306" height="488"/>
-                                    </imageView>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Lorem ipsum dolor sit er elit lamet, consectetaur " translatesAutoresizingMaskIntoConstraints="NO" id="d5v-L8-q0T">
-                                        <rect key="frame" x="0.0" y="496" width="306" height="184"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="184" id="dLG-OM-jSH"/>
-                                        </constraints>
-                                        <color key="textColor" systemColor="labelColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                    </textView>
-                                </subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q3X-Cb-3ML">
+                                <rect key="frame" x="54" y="104" width="306" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="306" id="oLW-7n-nqp"/>
+                                    <constraint firstAttribute="height" constant="200" id="z8p-Jc-FpU"/>
                                 </constraints>
-                            </stackView>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="album info" translatesAutoresizingMaskIntoConstraints="NO" id="d5v-L8-q0T">
+                                <rect key="frame" x="16" y="320" width="382" height="120"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="dLG-OM-jSH"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="we2-KY-xbd">
+                                <rect key="frame" x="16" y="505" width="382" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Artist Info" translatesAutoresizingMaskIntoConstraints="NO" id="Xlq-nb-n7Z">
+                                <rect key="frame" x="16" y="550" width="382" height="140"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="3HB-tM-pMr"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Years" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xe7-Kg-IvN">
+                                <rect key="frame" x="16" y="468" width="382" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="yUE-Md-Slc"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Vr3-Ws-Rs1" firstAttribute="centerY" secondItem="MlX-gF-gds" secondAttribute="centerY" id="JDY-PI-k5a"/>
-                            <constraint firstItem="Vr3-Ws-Rs1" firstAttribute="top" secondItem="yUE-Md-Slc" secondAttribute="top" constant="20" id="SYY-xc-WfE"/>
-                            <constraint firstItem="Vr3-Ws-Rs1" firstAttribute="centerX" secondItem="MlX-gF-gds" secondAttribute="centerX" id="jc9-KE-otp"/>
+                            <constraint firstItem="yUE-Md-Slc" firstAttribute="trailing" secondItem="d5v-L8-q0T" secondAttribute="trailing" constant="16" id="2aI-RR-IHk"/>
+                            <constraint firstItem="Xlq-nb-n7Z" firstAttribute="top" secondItem="we2-KY-xbd" secondAttribute="bottom" constant="16" id="L90-OZ-kNV"/>
+                            <constraint firstItem="Xlq-nb-n7Z" firstAttribute="leading" secondItem="yUE-Md-Slc" secondAttribute="leading" constant="16" id="O2Z-Ps-LOh"/>
+                            <constraint firstItem="Q3X-Cb-3ML" firstAttribute="top" secondItem="yUE-Md-Slc" secondAttribute="top" constant="16" id="Uyf-cB-8zV"/>
+                            <constraint firstItem="d5v-L8-q0T" firstAttribute="leading" secondItem="yUE-Md-Slc" secondAttribute="leading" constant="16" id="aZZ-Of-D7x"/>
+                            <constraint firstItem="yUE-Md-Slc" firstAttribute="trailing" secondItem="Xlq-nb-n7Z" secondAttribute="trailing" constant="16" id="i9V-p3-zsl"/>
+                            <constraint firstItem="d5v-L8-q0T" firstAttribute="top" secondItem="Q3X-Cb-3ML" secondAttribute="bottom" constant="16" id="jW6-MU-DIB"/>
+                            <constraint firstItem="Q3X-Cb-3ML" firstAttribute="leading" secondItem="yUE-Md-Slc" secondAttribute="leading" constant="54" id="kOn-mL-515"/>
+                            <constraint firstItem="yUE-Md-Slc" firstAttribute="trailing" secondItem="we2-KY-xbd" secondAttribute="trailing" constant="16" id="ky4-Nc-Js5"/>
+                            <constraint firstItem="we2-KY-xbd" firstAttribute="top" secondItem="Xe7-Kg-IvN" secondAttribute="bottom" constant="16" id="m04-G8-4qC"/>
+                            <constraint firstItem="we2-KY-xbd" firstAttribute="leading" secondItem="yUE-Md-Slc" secondAttribute="leading" constant="16" id="pkd-mi-3y3"/>
+                            <constraint firstItem="yUE-Md-Slc" firstAttribute="trailing" secondItem="Xe7-Kg-IvN" secondAttribute="trailing" constant="16" id="tPr-4U-uyj"/>
+                            <constraint firstItem="Xe7-Kg-IvN" firstAttribute="leading" secondItem="yUE-Md-Slc" secondAttribute="leading" constant="16" id="vGQ-A0-wMS"/>
+                            <constraint firstItem="Xe7-Kg-IvN" firstAttribute="top" secondItem="d5v-L8-q0T" secondAttribute="bottom" constant="28" id="z8h-ar-b0K"/>
+                            <constraint firstItem="Q3X-Cb-3ML" firstAttribute="centerX" secondItem="MlX-gF-gds" secondAttribute="centerX" id="zbK-1h-QGP"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="LoS-rh-plO">
                         <barButtonItem key="backBarButtonItem" title="Back" id="Cye-Xd-D9L"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="artistInfoTextView" destination="Xlq-nb-n7Z" id="npJ-5z-gae"/>
+                        <outlet property="artistNameLabel" destination="we2-KY-xbd" id="4Ve-e5-YyO"/>
                         <outlet property="imageAlbum" destination="Q3X-Cb-3ML" id="NsE-TB-ewn"/>
                         <outlet property="textInfoView" destination="d5v-L8-q0T" id="N8B-kK-TMy"/>
+                        <outlet property="yearAlbum" destination="Xe7-Kg-IvN" id="90F-zn-ZuR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HYK-Rx-Fh4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
